lab/exercise_kubernetes/dp-definition.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-dp
  labels:
    app: myapp
    type: front-end
spec:
    template:
      metadata:                 # Pod 1 metadata
        name: myapp-pod
        labels:
          app: myapp
          type: front-end
      spec:
        containers:
          - name: nginx-container
            image: nginx
    replicas: 3
    selector:
        matchLabels:
            type: front-end
