lab/exercise_kubernetes/nginx-pod-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  types: front-end
spec:
  containers:
    - name: nginx-container
      image: nginx:latest
      ports:
        - containerPort: 8000
