lab/exercise_kubernetes/pod-definition-with-network-policy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: internal-app
  namespace: default
  labels:
      name: internal-app
spec:
    containers:
    - name: internal-app-container
      image: nginx:latest
