lab/exercise_kubernetes/service-definition.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  ports:
    - targetPort: 80      # Port on the Pod
      port: 80            # Port on the Service
      nodePort: 30008     # Port on the Node, must be between 30000-32767
  selector:
    app: myapp            # Select Pods with label app=myapp
    type: front-end       # Select Pods with label type=front-end
