lab/exercise_kubernetes/network-policy-definition.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: internal-policy
    namespace: default
spec:
    podSelector:
        matchLabels:
            name: internal-app
    policyTypes:
    - Ingress
    - Egress
    ingress:
    - from:
        - podSelector:
            matchLabels:
                role: frontend
    egress:
    - to:
        - podSelector:
            matchLabels:
                role: database
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 27017
